@@ -2269,3 +2269,5 @@ pabopto2bsdf).  The other input types already sampled incident patch area.
 
 Added gendaymtx -A option to compute average sky over all the input
 time steps.
+
+Added ability to output color image from rtrace with any of -ovrx options.
